# helpinghand

./: .gitattributes  .gitignore  LICENSE  README.md  config.py  helpinghand.py  log.py  pyproject.toml
app/: __init__.py  custom.py  dist.py  local.py  upload.py
app/custom/: HHCompanion.ps1  HHCompanion.sh  TEMPLATE_Pillage-Stage2.ps1  TEMPLATE_Pillage.ps1  TEMPLATE_Pillage.sh  wuff.ps1
hh/: cli.py  creds.py  diff.py  host.py  lin.py  mimi_parser.py  misc.py  network_discover.py  tmux.py  tools.py  utils.py  win.py  worker.py
migrations/: alembic.ini  env.py
migrations/versions/: 1ed024d8871b_init.py  8d9204d10613_host_compromised_flag.py  9bee403e5501_added_sysinfos_columns_for_host.py
models/: __init__.py
